assets/css/less/admin/notification.less
.wpbdp_notification_shadow() {
	display: block;
	background-color: @white;
	border-radius: 7px;
	box-shadow: 1px 2px 5px 0px rgba(179,175,175,0.75);
	-webkit-box-shadow: 1px 2px 5px 0px rgba(179,175,175,0.75);
	-moz-box-shadow: 1px 2px 5px 0px rgba(179,175,175,0.75);
}
.wpbdp_notification_buttons() {
	border-radius: 12px;
	background-color: @text-color;
	color: @white;
	padding: 5px 15px;
}

.post-type-wpbdp_listing .notice,
.wpbdp-admin-layout .notice,
.directory_page_wpbdp_settings .notice,
.wpbdp-admin-page .wpbdp-upgrade-bar,
.wpbdp-admin-page .wpbdp-notice {
	display: none
}

.wpbdp-bell-notifications-list {
	clear: both;
	margin-top: 0;
	.notice, .wpbdp-upgrade-bar, .wpbdp-notice {
		display: block;
	}
}

.wpbdp-bell-notification {
	display: none;
	position: fixed;
	right: 20px;
	bottom: 20px;

	svg {
		height: 48px;
		width: 48px;
		display: block;
	}
}

.wpbdp-bell-notification-icon {
	.wpbdp_notification_shadow();
	&:focus {
		outline: 0;
		.wpbdp_notification_shadow();
	}
}

.wpbdp-bell-notifications {
	position: fixed;
	bottom: 75px;
	min-width: 20%;
	right: 20px;
	max-width: 400px;
	font-size: 13px;

	li {
		padding: 10px 25px;
		.wpbdp_notification_shadow();
		.notice-dismiss {
			right: 0;
			top: 7px;
		}
	}
}

.wpbdp-bell-notifications-close {
	.wpbdp_notification_buttons();
	text-decoration: none;
	display: block;
	float: right;
	margin-bottom: 15px;

	&:hover {
		color: @white;
	}
}

